--- a/monogem/MonoGem.Android/packages.config
+++ b/monogem/MonoGem.Android/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FFAssetPack" version="1.0.0" targetFramework="monoandroid81" />
+  <package id="MGLayers" version="1.0.0" targetFramework="monoandroid81" />
   <package id="MonoGame.Framework.Android" version="3.6.0.1625" targetFramework="monoandroid81" />
+  <package id="MonoGame.Framework.Portable" version="3.6.0.1625" targetFramework="monoandroid81" />
 </packages>
